cmake_minimum_required(VERSION 2.8)
project(LIOSOCKET)
FILE(GLOB SOURCE "${CMAKE_SOURCE_DIR}/src/*.c")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include/")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
ADD_LIBRARY(srv SHARED ${SOURCE})
link_libraries(srv)
ADD_EXECUTABLE(main ./main.c)
ADD_EXECUTABLE(log_test ./log_test.c)
target_link_libraries(main ${srv} -lpthread)
target_link_libraries(log_test ${srv} -lpthread)